--- a/TODO.txt
+++ b/TODO.txt
@@ -10,4 +10,4 @@ MAJOR THINGS TO FOCUS ON
 
 MINOR THINGS
 --------------
-1. REDO THE AUDIO RESYNC SYSTEM 
+1. REDO THE AUDIO RESYNC SYSTEM (COMPLETED)
