--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-test
+Hello welcome to the VFU/Psych + github!
+
+
+I will list the things you can and cannot do.
+
+
+##WHAT YOU CAN DO##
+--------------------
+1. You may use Psych + for mods under given permission from Sox
+(unfin)
