--- a/README
+++ b/README
@@ -7,4 +7,5 @@ I will list the things you can and cannot do.
 ##WHAT YOU CAN DO##
 --------------------
 1. You may use Psych + for mods under given permission from Sox
+2. You may make pull requests to help the mod be optimized better
 (unfin)
