Not sure if I’m happy with this idk

--- a/README
+++ b/README
@@ -17,6 +17,7 @@ I will list the things you can and cannot do.
 2. Make a mods folder "port" on psych. The point of this engine was to be optimized to begin with
 3. Call this engine as your own. Seriously that's just stealing
 4. Use the issues tab as a chat room. It was called issues for a reason
+5. Ask me to add editors and all of that. This engine's purpose was to be easier for actual programmers. Not make it easy on lower knowledged ones.
 
 
 ##KNOWN BUGS AND SOLUTIONS##
